# stork.cxx

./: .editorconfig  .gitattributes  CMakeLists.txt  README.md
include/oxy/stork/: stork.hxx
src/: CMakeLists.txt  stork.cxx
tests/: CMakeLists.txt  entry_test.cxx
